--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+.container {
+        width: 300px;
+        padding: 20px;
+        border: 2px solid #000;
+        border-radius: 10px;
+        text-align: center;
+        margin: 50px auto;
+    }
+    .red, .green, .yellow {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin: 10px;
+}
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}   
